# PyMISPGalaxies

./: .gitmodules  .travis.yml  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: nosetests.yml  pytest.yml  release.yml
docs/: Galaxie_MISP.ipynb
pymispgalaxies/: __init__.py  api.py
tests/: tests.py  tests_api.py
