[project]
name = "pymispgalaxies"
version = "1.1.1"
description = "Python API for the MISP Galaxies."
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"

dynamic = [ "classifiers" ]

dependencies = [
    "jsonschema (>4.24.0)"
]


[project.urls]
repository = "https://github.com/MISP/PyMISPGalaxies"
issues = "https://github.com/MISP/PyMISPGalaxies/issues"

[tool.poetry]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Topic :: Security',
    'Topic :: Internet',
]

exclude = ["pymispgalaxies/data/misp-galaxy/tools/**/*"]

include = [
    {path = "pymispgalaxies/data/misp-galaxy/schema_*.json", format = ["sdist", "wheel"]},
    {path = "pymispgalaxies/data/misp-galaxy/clusters/*.json", format = ["sdist", "wheel"]},
	{path = "pymispgalaxies/data/misp-galaxy/galaxies/*.json", format = ["sdist", "wheel"]},
	{path = "pymispgalaxies/data/misp-galaxy/misp/*.json", format = ["sdist", "wheel"]},
	{path = "pymispgalaxies/data/misp-galaxy/vocabularies/common/*.json", format = ["sdist", "wheel"]},
	{path = "pymispgalaxies/data/misp-galaxy/vocabularies/threat-actor/*.json", format = ["sdist", "wheel"]}
]


[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
coverage = "^7.13.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
